--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the questions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+form {
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+
+.blue-btn {
+  background-color: rgb(41, 109, 236);
+  color: white;
+  border: none;
+  padding: 5px;
+  border-radius: 4px;
+}
