--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -2,5 +2,5 @@
 
 <form action="answer">
   <input type="text" name="question">
-  <input type="submit" value="Ask">
+  <input type="submit" value="Ask" class="blue-btn" style="display: inline;">
 </form>
